(fix) hero: add proper spacing for large screens

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -22,10 +22,12 @@
 	color: $color-white;
 	overflow: hidden;
 
+
 	&__stripe {
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		top: 100%;
 		overflow: hidden;
 		transform: skewY(-5deg);
 		transform-origin: 0;
@@ -51,6 +53,15 @@
 		margin: 0 auto;
 		position: relative;
 		z-index: 3;
+		@include mq($from: large) {
+			padding-bottom: 140px;
+		}
+		@include mq($from: 1600px) {
+			padding-bottom: 180px;
+		}
+		@include mq($from: 1920px) {
+			padding-bottom: 240px;
+		}
 	}
 
 	&__buttons {
